# users/src/main/java/com/paranoiax/users/infrastructure/rest/api/devices/v1/DeviceController.java
@@ -1,5 +1,7 @@
 package com.paranoiax.users.infrastructure.rest.api.devices.v1;
 
+import com.paranoiax.users.application.ports.in.devices.register.RegisterDeviceCommand;
+import com.paranoiax.users.application.ports.in.devices.register.RegisterDeviceUseCase;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -11,6 +13,8 @@ import java.util.UUID;
 @RestController
 @RequestMapping("/v1/users/devices")
 public class DeviceController {
+    private final RegisterDeviceUseCase registerDeviceUseCase;
+
     @PutMapping("/{device_id}")
     @ResponseStatus(HttpStatus.NO_CONTENT)
     public void register(
@@ -18,6 +22,17 @@ public class DeviceController {
             @PathVariable("device_id") UUID deviceId,
             @Valid @RequestBody RegisterDeviceRequest request
     ) {
+        registerDeviceUseCase.execute(new RegisterDeviceCommand(
+                request.migrationId(),
+                deviceId,
+                request.deviceName(),
+                request.deviceType(),
+                request.signature(),
+                request.identityKey(),
+                request.encryptionKey(),
+                request.deviceSignature(),
+                idempotencyKey
+        ));
     }
 
     @DeleteMapping("/{device_id}")
